# gimbal_controller

./: CMakeLists.txt  README.md  package.xml
config/: gimbal_controller.yaml
include/: GetParams.h
launch/: start.launch
models/airplane/: model.config  model.sdf
models/airplane_animation/: model.sdf
models/airplane_animation/materials/script/: airplane.material
models/ball/: model.config  model.sdf
models/ball/materials/script/: ball.material
msg/: BoundingBox.msg
src/: GetParams.cpp  animated_ball.cc  control_gimbal.py  control_joint.cpp  gimbal_control.cpp  inverse_kinematic.cpp  publish_center.py  read_camera.py  read_joints.py  track_object.py
src/animate/: animated_ball.cc  animated_object_1.cc
src/darknet/: darknet_bb.cpp
src/gimbal/: control_joint.cpp  gimbal_dji.cpp  gimbal_imu_control.cpp  gimbal_track_control.cpp  gimbal_track_control_imu.cpp  inverse_kinematic.cpp  read_gimbal.cpp  read_image.cpp  write_gimbal_angle.cpp
src/gimbal/position_control/: gimbal_imu_control.cpp
src/gimbal/track_control/: ik_track_control.cpp  ik_track_control_imu.cpp  pid_track_control.cpp  pid_track_control_imu.cpp
src/odometry/: rpa_odometry.cpp
src/opencv/: object_moviment.py  pub_camera.cpp  publish_center.py  read_boundingbox.py
src/sensors/: read_attitude.cpp  read_gimbal_imu.cpp  read_imu.cpp  read_poses.cpp  read_voposition.cpp
urdf/: camera.xacro  camera_viewer.xacro  component_snippets.xacro  generic_gimbal_base.xacro  gimbal_structure.xacro
urdf/meshes/: gimbal_parte_2.dae  gimbal_parte_3.dae
worlds/: basic.world
