<?xml version="1.0"?>
<package>
    <name>gimbal_controller</name>
    <version>0.0.0</version>
    <description>A control gimbal</description>

    <maintainer email="daniel_regner@hotmail.com">Daniel Regner</maintainer>

    <license>ASL 2.0</license>

    <url type="website">https://github.com/dregner</url>


    <author email="daniel_regner@hotmail.com">Daniel Regner</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>gazebo_msgs</build_depend>


    <run_depend>gazebo_plugins</run_depend>
    <run_depend>gazebo_msgs</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>controller_manager</run_depend>
    <run_depend>joint_state_controller</run_depend>
    <run_depend>robot_state_publisher</run_depend>

    <run_depend>rqt_gui</run_depend>
    <run_depend>effort_controllers</run_depend>
	


    <export>
    </export>
</package>

